Fix navbar: match offers pages exactly
- Changed tekna to .tekNa (with dot)
- Changed tagline to: Sites vitrines qui convertissent
- Now identical to depanneur/electricien/serrurier pages

--- a/src/index.njk
+++ b/src/index.njk
@@ -219,8 +219,8 @@ permalink: /
 
 <div class="navbar">
   <div class="navbar-content">
-    <div class="navbar-brand">tekNa</div>
-    <div class="navbar-tagline">Sites web professionnels</div>
+    <div class="navbar-brand">.tekNa</div>
+    <div class="navbar-tagline">Sites vitrines qui convertissent</div>
   </div>
 </div>
 
