--- a/src/demo-electricien-standard.njk
+++ b/src/demo-electricien-standard.njk
@@ -58,4 +58,4 @@ permalink: /demos/electricien/standard/
 {# FOOTER #}
 {% include "partials/footer.njk" %}
 
-<script src="/assets/carousel-momentum.js"></script>
+<script src="/assets/carousel-momentum.js?v=202501042300"></script>
