--- a/src/demo-serrurier-premium.njk
+++ b/src/demo-serrurier-premium.njk
@@ -59,4 +59,4 @@ permalink: /demos/serrurier/premium/
 {# FOOTER #}
 {% include "partials/footer.njk" %}
 
-<script src="/assets/carousel-momentum.js"></script>
+<script src="/assets/carousel-momentum.js?v=202501042300"></script>
