--- a/src/depanneur.njk
+++ b/src/depanneur.njk
@@ -1,6 +1,7 @@
 ---
 layout: base.njk
-title: Sites Web Dépanneur - Choisissez votre formule
+title: Site Web Dépanneur à partir de 250€ - 3 formules | tekNa
+description: 🚛 Créez votre site de dépanneur dès 250€ ! Design d'urgence avec appel direct, disponibilité 24/7. Lite 250€, Standard 350€, Premium 400€.
 permalink: /depanneur/
 ---
 
