--- a/src/electricien.njk
+++ b/src/electricien.njk
@@ -1,6 +1,7 @@
 ---
 layout: base.njk
-title: Sites Web Électricien - Choisissez votre formule
+title: Site Web Électricien à partir de 250€ - 3 formules | tekNa
+description: ⚡ Créez votre site d'électricien dès 250€ ! Galerie de réalisations, certifications, zones d'intervention. Lite 250€, Standard 350€, Premium 400€.
 permalink: /electricien/
 ---
 
