--- a/src/index.njk
+++ b/src/index.njk
@@ -1,7 +1,7 @@
 ---
 layout: base.njk
-title: tekNa Studio - Sites Web Professionnels à partir de 250€
-description: Créez votre présence en ligne dès 250€. Sites web professionnels pour dépanneurs, électriciens et serruriers. Livraison rapide.
+title: Votre présence en ligne pour seulement 250€ | tekNa Studio
+description: 💎 Site web professionnel à partir de 250€ ! Dépanneurs, électriciens, serruriers. Livraison rapide, design moderne, 100% mobile. 3 formules disponibles.
 permalink: /
 ---
 
