--- a/src/serrurier.njk
+++ b/src/serrurier.njk
@@ -1,6 +1,7 @@
 ---
 layout: base.njk
-title: Sites Web Serrurier - Choisissez votre formule
+title: Site Web Serrurier à partir de 250€ - 3 formules | tekNa
+description: 🔐 Créez votre site de serrurier dès 250€ ! Intervention rapide, tarifs transparents, ouverture sans casse. Lite 250€, Standard 350€, Premium 400€.
 permalink: /serrurier/
 ---
 
